changes in file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       let sum = (+n1 + +n2 + +n3)/3;//Середнє арифметичне з трьох чисел.
       alert(`Середне арифметичне становить (${n1}+${n2}+${n3})/3 = ${sum}`); 
       /*зміни в файлі*/
+      /*фіксуємо зміни*/
     </script>
   </body>
   
