--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       alert(`Середне арифметичне становить (${n1}+${n2}+${n3})/3 = ${sum}`); 
       /*зміни в файлі*/
       /*фіксуємо зміни*/
+      /*ще зміни*/
     </script>
   </body>
   
