--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Середнє арифметичне чисел</title>
   </head>
   <body>
+    <img src="https://www.interfax.ru/ftproot/photos/photostory/2022/04/29/week/week7_1100.jpg" alt="">
     <script>
      let n1 = prompt("Введіть перше число");
      let n2 = prompt("Введіть друге число");
@@ -18,6 +19,7 @@
       /*зміни в файлі*/
       /*фіксуємо зміни*/
       /*ще зміни*/
+      
     </script>
   </body>
   
