--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Середнє арифметичне чисел</title>
   </head>
   <body>
+    <img src="https://img.freepik.com/free-photo/lavender-field-at-sunset-near-valensole_268835-3910.jpg" alt="">
     <img src="https://www.interfax.ru/ftproot/photos/photostory/2022/04/29/week/week7_1100.jpg" alt="">
     <script>
      let n1 = prompt("Введіть перше число");
