--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Середнє арифметичне чисел</title>
   </head>
   <body>
-    <img src="https://img.freepik.com/free-photo/lavender-field-at-sunset-near-valensole_268835-3910.jpg" alt="">
+
 
     <script>
      let n1 = prompt("Введіть перше число");
@@ -20,6 +20,9 @@
       /*зміни в файлі*/
       /*фіксуємо зміни*/
       /*ще зміни*/
+      let m = prompt("Введіть рік народження(формат ХХХХ)");
+      let mm = (2023 - m);
+      alert(`Вам ${mm} років`)
       
     </script>
   </body>
