--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       let m = prompt("Введіть рік народження(формат ХХХХ)");
       let mm = (2023 - m);
       alert(`Вам ${mm} років`)
-      /*нові зміни*/
+      /*нові зміни*/;
+      /*---------*/
     </script>
   </body>
   
